--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,5 @@
-COUCHDB_URL=http://localhost:5984/birthday_db
+COUCHDB_URL=http://localhost:5984/
+COUCHDB_DB=birthday_db
+COUCHDB_USER=admin
+COUCHDB_PASSWORD=student
 FLASK_RUN_PORT=8001
