chouch db pod geht flask läd image nicht

--- a/kubernetes/couchdb_deployment.yaml
+++ b/kubernetes/couchdb_deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: couchdb
-        image: haraldu/dhbw-couch:1
+        image: dhbw-couch:1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5984
